# fanest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_test.py
docs/: COMPLETE_FEATURE_GAP_ANALYSIS.md  FOUNDATION_AUDIT.md
examples/: __init__.py
examples/all_uses/: main.py
examples/basic/: main.py
examples/production_style/: __init__.py  app_module.py  common.py  graphql.py  jobs.py  main.py  realtime.py  settings.py
examples/production_style/notifications/: __init__.py  controller.py  listeners.py  module.py  processor.py  service.py
examples/production_style/users/: __init__.py  controller.py  dto.py  module.py  repository.py  service.py
scripts/: certify_live_external_services.py  verify_release.py
src/fanest/: __init__.py  _version.py  mapped_types.py
src/fanest/auth/: __init__.py  jwt.py  passport.py  policies.py
src/fanest/cache/: __init__.py  module.py
src/fanest/cli/: main.py
src/fanest/common/: __init__.py  decorators.py  exceptions.py  middleware.py  pipes.py  pydantic_compat.py  responses.py  serialization.py  upload.py  versioning.py
src/fanest/config/: __init__.py  module.py
src/fanest/core/: __init__.py  application.py  container.py  discovery.py  enhancers.py  factory.py  lazy_loader.py  metadata.py  module.py  module_ref.py  providers.py  reflector.py  router.py  scanner.py
src/fanest/cqrs/: __init__.py  module.py
src/fanest/events/: __init__.py  module.py
src/fanest/graphql/: __init__.py  module.py
src/fanest/health/: __init__.py  module.py
src/fanest/http/: __init__.py  module.py
src/fanest/i18n/: __init__.py  module.py
src/fanest/inertia/: __init__.py  context.py  errors.py  middleware.py  module.py  props.py  rendering.py  service.py  ssr.py  testing.py  vite.py
src/fanest/logger/: __init__.py  module.py
src/fanest/mailer/: __init__.py  module.py
src/fanest/metrics/: __init__.py  module.py
src/fanest/microservices/: __init__.py  module.py
src/fanest/mikroorm/: __init__.py
src/fanest/mongodb/: __init__.py  module.py
src/fanest/platform_fastapi/: __init__.py  adapter.py  modules.py
src/fanest/prisma/: __init__.py
src/fanest/queues/: __init__.py  module.py
src/fanest/schedule/: __init__.py  decorators.py  registry.py  runner.py
src/fanest/security/: __init__.py  module.py
src/fanest/sequelize/: __init__.py
src/fanest/serve_static/: __init__.py  module.py
src/fanest/session/: __init__.py  module.py
src/fanest/sqlalchemy/: __init__.py  module.py
src/fanest/swagger/: __init__.py  decorators.py  module.py
src/fanest/testing/: __init__.py  module.py
src/fanest/throttler/: __init__.py  module.py
src/fanest/websockets/: __init__.py  manager.py
src/fanest/workers/: __init__.py  module.py
tests/: test_adapter_bugfixes_r2.py  test_advanced_di.py  test_app_enhancers.py  test_application.py  test_auth_config_security_validation_hardening.py  test_auth_health.py  test_auth_policies.py  test_auth_security_parity.py  test_basic_app.py  test_builtin_modules_batch.py  test_cache_ws_bugfixes_r2.py  test_cli.py  test_common_bugfixes_r2.py  test_common_completions.py  test_config_security_auth.py  test_config_testing_swagger.py  test_core_bugfixes_r2.py  test_cqrs_module.py  test_deep_http.py  test_discovery_service.py  test_events_module.py  test_examples_production_style.py  test_exception_classes.py  test_external_integration_contracts.py  test_file_pipes.py  test_framework_options.py  test_gap_fixes.py  test_global_modules_signature.py  test_graphql_fragments.py  test_graphql_module.py  test_graphql_variables.py  test_http_module.py  test_http_parity_batch.py  test_http_response_helpers.py  test_i18n_bull.py  test_inertia.py  test_integration_smoke.py  test_lazy_module_loader.py  test_lifecycle_hooks.py  test_live_external_services_certification.py  (+34 more)
