[project]
name = "fanest"
version = "0.3.0b2"
description = "NestJS-style backend architecture for Python, powered by FastAPI."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "fastapi", "nestjs", "backend", "framework", "dependency-injection"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "croniter>=3.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "graphql-core>=3.2.3",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
    "httpx2>=2.5.0",
]

[project.optional-dependencies]
standard = [
    "uvicorn[standard]>=0.30.0",
]
redis = [
    "redis>=5.0.0",
]
nats = [
    "nats-py>=2.7.0",
]
rabbitmq = [
    "aio-pika>=9.4.0",
]
kafka = [
    "aiokafka>=0.10.0",
]
grpc = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
]
mongo = [
    "motor>=3.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
microservices = [
    "aio-pika>=9.4.0",
    "aiokafka>=0.10.0",
    "nats-py>=2.7.0",
    "redis>=5.0.0",
]
integrations = [
    "aio-pika>=9.4.0",
    "aiokafka>=0.10.0",
    "asyncpg>=0.29.0",
    "motor>=3.0.0",
    "nats-py>=2.7.0",
    "redis>=5.0.0",
]
dev = [
    "build>=1.2.0",
    "pyright>=1.1.411",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine>=6.0.0",
]

[project.scripts]
fanest = "fanest.cli.main:app"

[project.urls]
Homepage = "https://github.com/ahfoysal/fanest"
Repository = "https://github.com/ahfoysal/fanest"
Issues = "https://github.com/ahfoysal/fanest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fanest"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/benchmarks",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live_external: external service certification harness with opt-in live probes",
    "live_redis: requires FANEST_LIVE_REDIS_URL",
    "live_mongo: requires FANEST_LIVE_MONGO_URL",
    "live_postgres: requires FANEST_LIVE_POSTGRES_URL",
    "live_rabbitmq: requires FANEST_LIVE_RABBITMQ_URL",
    "live_nats: requires FANEST_LIVE_NATS_URL",
    "live_kafka: requires FANEST_LIVE_KAFKA_BOOTSTRAP_SERVERS",
    "live_smtp: requires FANEST_LIVE_SMTP_HOST",
    "live_grpc: requires FANEST_LIVE_GRPC_TARGET or FANEST_LIVE_GRPC_TOOLS=1",
    "wheel_smoke: requires FANEST_LIVE_WHEEL=1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["src/fanest"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
